--- a/src/components/layout/Navigation.module.css
+++ b/src/components/layout/Navigation.module.css
@@ -43,9 +43,8 @@
     align-items: center;
     position: fixed;
     top: 0;
-    left: 0;
-    /* left: 100%; */
-    /* z-index: -10; */
+    left: 100%;
+    z-index: -10;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.8);
@@ -56,5 +55,10 @@
 
   .nav-item {
     margin: 1rem 0;
+  }
+
+  .show {
+    left: 0 !important;
+    z-index: 10 !important;
   }
 }
