--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   /* background: radial-gradient(circle, #000, #f0cd00, #232323) no-repeat center
     fixed; */
-  background-color: #322a00;
+  background-color: #333;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
