--- a/src/components/UI/Hamburger.module.css
+++ b/src/components/UI/Hamburger.module.css
@@ -1,3 +1,5 @@
+@import "../../global.css";
+
 #hamburger {
   width: 40px;
   height: 45px;
@@ -15,6 +17,7 @@
   cursor: pointer;
   z-index: 20;
   border: 2px solid #000;
+  background-color: var(--dark);
 }
 
 #hamburger span {
