--- a/src/components/sections/WorkExperience.module.css
+++ b/src/components/sections/WorkExperience.module.css
@@ -1,10 +1,11 @@
 @import "../../global.css";
 
 section {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
 .section-title {
