--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -2,21 +2,19 @@
 
 header {
   align-items: center;
-  box-shadow: 0 5px 30px var(--darkest);
+  box-shadow: 0px 0px 15px var(--primary-color);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1rem;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
 }
 
-.logo {
-  border-right: 1px solid var(--darkest);
-  padding-right: 30%;
+.header-logo {
+  /* border-right: 1px solid var(--primary-color); */
+  padding: 1rem 30% 1rem 1rem;
   width: 50px;
-}
-
-.darkMode {
-  background-color: rgba(40, 40, 40, 0.8) !important;
 }
 
 @media screen and (max-width: 639px) {
