--- a/src/components/layout/Navigation.css
+++ b/src/components/layout/Navigation.css
@@ -4,31 +4,19 @@
   list-style-type: none;
 }
 
-.nav-link:link,
-.resume:link {
-  color: var(--dark);
-  font-size: 1rem;
+.nav-link:link {
+  color: var(--primary-color);
+  font-size: 1.8rem;
+  font-weight: bold;
   text-decoration: none;
 }
 
-.nav-link:visited,
-.resume:visited {
-  color: var(--dark);
+.nav-link:visited {
+  color: var(--primary-color);
 }
 
-.nav-link:hover,
-.resume:hover {
-  color: var(--darkest);
-}
-
-.resume {
-  border: 1px solid var(--dark);
-  border-radius: 5px;
-  padding: 0.5rem;
-}
-
-.resume:hover {
-  border: 1px solid var(darkest);
+.nav-link:hover {
+  color: var(--primary-color);
 }
 
 @media screen and (max-width: 639px) {
@@ -43,7 +31,7 @@
     z-index: -10;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(50, 50, 50, 0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     margin: 0;
     padding: 0;
     list-style: none;
