--- a/src/components/sections/WorkExperience.css
+++ b/src/components/sections/WorkExperience.css
@@ -1,18 +1,5 @@
 @import "../../global.css";
 
-section {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-}
-
-.section-title {
-  margin: 0;
-  width: 90%;
-}
-
 .work-tabs {
   display: flex;
   flex-direction: row;
@@ -25,13 +12,14 @@ section {
 }
 
 .work-tabs::-webkit-scrollbar-track {
-  background: var(--darker); /* color of the tracking area */
+  background: var(--primary-color-dark); /* color of the tracking area */
+  box-shadow: inset 0 0 6px var(--black);
+  padding: 1rem;
 }
 
 .work-tabs::-webkit-scrollbar-thumb {
-  background-color: var(--darkest); /* color of the scroll thumb */
-  border-radius: 20px; /* roundness of the scroll thumb */
-  border: 3px solid var(--darker); /* creates padding around scroll thumb */
+  background-color: var(--primary-color); /* color of the scroll thumb */
+  /* border: 3px solid var(--primary-color-light); */
 }
 
 .show {
