--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,16 @@
 :root {
-  --dark: #666;
-  --darker: #333;
-  --darkest: #000;
-  --light: #aaa;
-  --lighter: #ccc;
-  --lightest: #eee;
+  --primary-color: #0048c8;
+  --primary-color-dark: #00112e;
+  --primary-color-light: #b6d9ff;
+  --secondary-color: #d6055a;
+  --secondary-color-dark: #2e0113;
+  --secondary-color-light: #ffb6d9;
+  --white: #fff;
+  --black: #000;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -12,17 +18,149 @@ body {
 }
 
 header {
-  background-color: rgba(245, 245, 245, 0.8);
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 main {
-  background-color: var(--light);
+  background-color: var(--white);
 }
 
 footer {
-  background-color: var(--lightest);
+  background-color: var(--white);
 }
 
-button {
-  cursor: pointer;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--primary-color);
+  font-family: "Cousine", monospace;
+}
+
+p,
+span,
+a,
+li {
+  color: var(--primary-color);
+  font-family: "Raleway", sans-serif;
+}
+
+section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 3rem;
+  scroll-margin: 85px;
+  width: 100%;
+}
+
+.section-title {
+  box-sizing: border-box;
+  box-shadow: 0 0 10px var(--primary-color);
+  font-size: 1.8rem;
+  margin: 0.5rem 0;
+  padding: 0.5rem 1.5rem;
+  width: 100%;
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  padding: 0 2rem;
+}
+
+/** ================= Dark Mode ================= */
+.dark-mode h1,
+.dark-mode h2,
+.dark-mode h3,
+.dark-mode h4,
+.dark-mode h6,
+.dark-mode a {
+  color: var(--secondary-color-light) !important;
+}
+
+.dark-mode span,
+.dark-mode h5 {
+  color: var(--secondary-color) !important;
+}
+
+.dark-mode p,
+.dark-mode li {
+  color: var(--secondary-color);
+  font-family: "Raleway", sans-serif;
+}
+
+.dark-mode .section-title {
+  box-shadow: 0 0 10px var(--secondary-color);
+}
+
+/* ================= Header ================= */
+.dark-mode header {
+  background-color: rgba(0, 0, 0, 0.6) !important;
+  box-shadow: 0px 0px 15px var(--secondary-color) !important;
+}
+
+/* ================= Navigation ================= */
+.dark-mode .nav {
+  background-color: rgba(0, 0, 0, 0.9) !important;
+}
+
+.dark-mode .nav-link:visited,
+.dark-mode .nav-link:link {
+  color: var(--secondary-color) !important;
+}
+
+/* ================= Layout ================= */
+.dark-mode main {
+  background-color: var(--black);
+  /* background-image: linear-gradient(
+    to bottom right,
+    var(--primary-color-dark),
+    var(--secondary-color-dark)
+  ); */
+}
+
+/* ================= About ================= */
+.dark-mode .profile-border {
+  border: 5px solid var(--secondary-color) !important;
+}
+
+/* ================= Projects ================= */
+.dark-mode .project {
+  box-shadow: 3px 3px 10px var(--secondary-color) !important;
+}
+
+.dark-mode .project-icon:link,
+.dark-mode .project-icon:visited {
+  color: var(--secondary-color);
+  font-size: 2rem;
+}
+
+.dark-mode hr {
+  border-color: var(--secondary-color) !important;
+}
+
+/* ================= Footer ================= */
+.dark-mode footer {
+  background-color: var(--black) !important;
+  box-shadow: 0 0px 15px var(--secondary-color) !important;
+}
+
+/* ================= Button ================= */
+.dark-mode .btn {
+  background-color: var(--secondary-color-dark) !important;
+  border-color: var(--secondary-color) !important;
+  color: var(--secondary-color-light) !important;
+}
+
+/* ================= Scrollbar ================= */
+.dark-mode .work-tabs::-webkit-scrollbar-track {
+  background: var(--secondary-color-dark); /* color of the tracking area */
+}
+
+.dark-mode .work-tabs::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-color); /* color of the scroll thumb */
 }
