--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -1,7 +1,7 @@
 @import "../../global.css";
 
 .btn {
-  background-color: var(--primary-color-light);
+  background-color: var(--white);
   border: 5px ridge var(--primary-color);
   color: var(--primary-color);
   cursor: pointer;
@@ -9,4 +9,8 @@
   font-weight: bold;
   height: 50px;
   min-width: 150px;
+}
+
+.btn:hover {
+  background-color: var(--primary-color-light);
 }
