--- a/src/components/UI/LightSwitch.css
+++ b/src/components/UI/LightSwitch.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  margin: 1rem 1rem 1rem auto;
+  margin: 1rem 2rem 1rem auto;
 }
 
 .lightbulb {
@@ -14,7 +14,7 @@
 
 .off {
   color: var(--black);
-  filter: drop-shadow(0 0px 3px var(--secondary-color));
+  filter: drop-shadow(0 0px 3px var(--secondary-color-light));
 }
 
 .on {
