--- a/src/components/home/WorkExperience.css
+++ b/src/components/home/WorkExperience.css
@@ -1,9 +1,11 @@
 @import "../../global.css";
 
 .work-tabs {
+  background-color: var(--primary-color-light);
+  box-shadow: 0 0 10px inset var(--primary-color-dark);
   display: flex;
   flex-direction: row;
-  overflow-x: auto;
+  justify-content: center;
   width: 100%;
 }
 
@@ -12,14 +14,16 @@
 }
 
 .work-tabs::-webkit-scrollbar-track {
-  background: var(--primary-color-dark); /* color of the tracking area */
-  box-shadow: inset 0 0 6px var(--black);
+  background: var(--primary-color); /* color of the tracking area */
+  box-shadow: inset 0 0 4px var(--black);
   padding: 1rem;
 }
 
 .work-tabs::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color); /* color of the scroll thumb */
+  background-color: var(--primary-color-light); /* color of the scroll thumb */
+  box-shadow: inset 0 0 10px var(--black);
   /* border: 3px solid var(--primary-color-light); */
+  border-radius: 5px;
 }
 
 .show {
@@ -46,4 +50,11 @@ span {
 
 .job-list {
   list-style-type: square;
+}
+
+@media screen and (max-width: 449px) {
+  .work-tabs {
+    justify-content: start;
+    overflow-x: auto;
+  }
 }
