--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -5,20 +5,24 @@ header {
   box-shadow: 0px 0px 15px var(--primary-color);
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   position: fixed;
   width: 100%;
   z-index: 20;
 }
 
 .header-logo {
-  /* border-right: 1px solid var(--primary-color); */
-  padding: 1rem 30% 1rem 1rem;
-  width: 50px;
+  max-width: 80px;
+  min-width: 55px;
+  padding: 1rem;
+  width: 10%;
 }
 
-@media screen and (max-width: 639px) {
+@media screen and (max-width: 719px) {
   header {
     justify-content: space-between;
+  }
+
+  .header-logo {
+    padding-right: 30%;
   }
 }
