More Responsive Design and Routing Fixes
Did some more with responsive design and fixed some routing errors.

--- a/src/components/home/WorkExperience.css
+++ b/src/components/home/WorkExperience.css
@@ -26,12 +26,12 @@
   border-radius: 5px;
 }
 
-.show {
+.work-show {
   display: flex;
   flex-direction: column;
 }
 
-.hidden {
+.work-hidden {
   display: none;
 }
 
