--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -5,6 +5,7 @@ header {
   box-shadow: 0px 0px 15px var(--primary-color);
   display: flex;
   flex-direction: row;
+  max-width: 1300px;
   position: fixed;
   width: 100%;
   z-index: 20;
