--- a/src/pages/ErrorPage.css
+++ b/src/pages/ErrorPage.css
@@ -2,10 +2,12 @@
 
 .error {
   align-items: center;
+  background-color: var(--white);
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
+  max-width: 1300;
 }
 
 .error img {
