--- a/src/components/home/Contact.css
+++ b/src/components/home/Contact.css
@@ -4,89 +4,7 @@
   text-align: center;
 }
 
-.section-content > p {
+.section-content > h4 {
   font-size: 1.5rem;
   text-align: center;
-}
-
-.contact-form {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.form-row {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
-.multi-input {
-  width: 50%;
-}
-
-.single-input {
-  width: 100%;
-}
-
-.form-input {
-  display: flex;
-  flex-direction: column;
-  margin: 0.5rem 1rem;
-}
-
-.form-input input,
-#message {
-  box-shadow: 2px 2px 10px inset var(--primary-color-dark);
-  font-size: 1.2rem;
-  padding: 0.3rem 1rem;
-}
-
-.form-input input {
-  height: 30px;
-}
-
-#message {
-  height: 100px;
-}
-
-.form-input input:focus,
-#message:focus {
-  background-color: var(--primary-color-light);
-}
-
-.submit {
-  margin: 0.5rem 0;
-}
-
-.social-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.social-links a {
-  font-size: 3rem;
-  margin: 0.5rem;
-  transition: transform 0.2s ease-out;
-}
-
-.social-links a.rotate-left:hover {
-  transform: rotate(-20deg);
-}
-
-.social-links a.rotate-right:hover {
-  transform: rotate(20deg);
-}
-
-@media screen and (max-width: 719px) {
-  .form-row {
-    flex-direction: column;
-  }
-
-  .form-input {
-    margin: 1rem 0;
-    width: 100%;
-  }
 }
