--- a/src/components/UI/Form.css
+++ b/src/components/UI/Form.css
@@ -77,6 +77,72 @@
   transform: rotate(20deg);
 }
 
+.square {
+  display: inline-block;
+  background-color: var(--primary-color);
+  height: 30px;
+  width: 30px;
+  margin: 0 1rem;
+}
+
+.loader {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 50px;
+  margin-top: 50px;
+}
+
+.square-1 {
+  animation-name: bounce;
+  -webkit-animation-name: bounce;
+  animation-delay: 0.3s;
+  -webkit-animation-delay: 0.3s;
+  animation-duration: 2.2s;
+  -webkit-animation-duration: 2.2s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+.square-2 {
+  animation-name: bounce;
+  -webkit-animation-name: bounce;
+  animation-delay: 0.4s;
+  -webkit-animation-delay: 0.4s;
+  animation-duration: 2.2s;
+  -webkit-animation-duration: 2.2s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+.square-3 {
+  animation-name: bounce;
+  -webkit-animation-name: bounce;
+  animation-delay: 0.5s;
+  -webkit-animation-delay: 0.5s;
+  animation-duration: 2.2s;
+  -webkit-animation-duration: 2.2s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(23px);
+  }
+  50% {
+    transform-origin: 50% 50%;
+    transform: translateX(-23px) rotate(-180deg);
+  }
+  75% {
+    transform-origin: 50% 50%;
+    transform: translateX(0);
+  }
+}
+
 .invalid {
   background-color: lightsalmon;
   color: red;
@@ -85,6 +151,7 @@
 .invalid-text {
   color: red;
   margin-top: 0;
+  text-align: center;
 }
 
 @media screen and (max-width: 719px) {
